<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/music_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/app_et_musicurl"/>
        <Button
            android:id="@+id/online_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_onlinemusic" />
        <Button
            android:id="@+id/download_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_downloadmusic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_selectfile" />

        <Button
            android:id="@+id/forward_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_forwardmusic" />


        <Button
            android:id="@+id/next_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_nextmusic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_backward" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_start" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_pause" />

        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_forward" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:text="0:00"
            />
        <ProgressBar
            android:id="@+id/music_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="10dp"
            android:text="0:00"
            />
    </LinearLayout>


</LinearLayout>