<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/remote_view_layout"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="48dp">

    <Button
        android:id="@+id/forward_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btn_forwardmusic" />
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btn_start" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btn_pause" />

    <Button
        android:id="@+id/next_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btn_nextmusic" />

</LinearLayout>