<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/download_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/start_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btn_start" />

    <Button
        android:id="@+id/pause_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btn_pause" />

    <Button
        android:id="@+id/cancel_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btn_canceldownload" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/download_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_tv_downloadprogress"/>
        <ProgressBar
            android:id="@+id/download_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0"/>
    </LinearLayout>



    <!--<com.zys.weather.musicplayer.Util.DownLoadProgressbar-->
        <!--android:id="@+id/dp_game_progress"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--zys:dptextsize="14sp" &lt;!&ndash; 这里设置控件的字体大小为14sp &ndash;&gt;-->
    <!--android:layout_below="@+id/tv_size">-->
<!--</com.zys.weather.musicplayer.Util.DownLoadProgressbar>-->

    </LinearLayout>